# ClawDemo

./: CMakeLists.txt  README.md  build.sh  config.json
src/: llm_client.cpp  llm_client.h  main.cpp  novel_agent.cpp  novel_agent.h  ws_server.cpp  ws_server.h
web/: index.html
